// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemovableButton/> custom props 1`] = `
<div>
  <div
    class="permissions-button-group btn-group"
  >
    <button
      class=" btn btn-primary"
      disabled=""
      type="button"
    >
      <i
        class="fa fa-remove"
      />
    </button>
    <button
      class="permissions-button-display btn btn-primary permissions-button-added"
      type="button"
    >
      Display Text (Custom)
    </button>
  </div>
</div>
`;

exports[`<RemovableButton/> default props 1`] = `
<div>
  <div
    class="permissions-button-group btn-group"
  >
    <button
      class=" btn btn-default"
      type="button"
    >
      <i
        class="fa fa-remove"
      />
    </button>
    <button
      class="permissions-button-display btn btn-default"
      type="button"
    >
      Display Text
    </button>
  </div>
</div>
`;

exports[`<RemovableButton/> not removable 1`] = `
<div>
  <button
    class="permissions-button-display btn btn-default"
    type="button"
  >
    Display Text (Not Removable)
  </button>
</div>
`;
